data/derived/comb/progs/unify/prog2421.ml.out
Characters 62-74:
  let fixpoint (f,b) = wwhile (if b = (f b) then (b,false) else ((f b),true),b);;
                                                                ^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type bool -> bool * bool
